Ensure concen overlay aligns with cell boundaries (root view now has fixed height 500px)

--- a/src/dumbComponents/RootColumn.scss
+++ b/src/dumbComponents/RootColumn.scss
@@ -13,8 +13,6 @@
   background-color: #fff;
 }
 .concentrations-overlay-v09ajv {
-  display: flex;
-  flex-direction: column;
   height: 100%;
   position: absolute;
   width: 100%;
