--- a/src/dumbComponents/RootView.scss
+++ b/src/dumbComponents/RootView.scss
@@ -1,8 +1,5 @@
 .root-view-aoviwha232fz {
-  display: flex;
-  justify-content: center;
   width: 200px;
-  height: 100vh;
   padding: 30px;
   overflow: hidden;
 }
